# libi2c_wrapper

./: .gitignore  Makefile.am  README.md  configure.ac
include/: I2CManager.h  I2CWrapper.h  i2c_wrapper.h
src/: I2CManager.cpp  I2CWrapper.cpp  i2c_wrapper.cpp
